Update for activator release

--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -1,4 +1,7 @@
-<htm>
+<html>
+    <head>
+        <title>Play + Java + Spring + GIS</title>
+    </head>
     <body>
         <div>
             <h2>Overview</h2>
@@ -9,4 +12,4 @@
             Page number 2
         </div>
     </body>
-</htm>
+</html>
